2014-03-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion): Add LaTeX-like markup for boldface
	and italic in enhanced text mode:
		'{\it italic} {/Times=12 \bf boldface}'
	The backslash is a bit annoying because in double quotes you need to
	escape it: "{\\it italic}".  We may want to change it.

	* src/qtterminal/QtGnuplotItems.* src/qtterminal/QtGnuplotScene.cpp
	src/qtterminal/qt_term.cpp:  Implement boldface and italic markup for
	enhanced text.

	* src/wxterminal/gp_cairo.c: Implement boldface and italic markup for
	cairo terminals.

2014-03-08  Christoph Bersch <usenet@bersch.net>

	* src/set.c src/boundary.c: Allow changing textcolor of the timestamp.

2014-03-08  Alexander Täschner  <taschna@users.sourceforge.net>

	* src/fit.c (print_function_definitions):  Print a list of function
	definitions used by the fit command to fit.log. Limit maximum number
	of functions and recursions (changes by BM).
	Patch #654

	* src/fit.c (fit_command):  Include name of the parameter file in
	error message.

2014-03-08  Dima Kogan  <dima@secretsauce.net>

	* docs/doc2texi.el docs/gpcard.tex: Remove last traces of cgi.trm

	* src/term.c: Print a warning if someone tries to plot while the
	terminal type is "unknown".

2014-03-07  Alexander Täschner  <taschna@users.sourceforge.net>

	src/stats.c docs/gnuplot.doc:  Add the calculation of the skewness,
	the kurtosis, and the standard errors of mean, stddev, skewness,
	and kurtosis to the stats command. Change the calculation formula
	for the variance to the "corrected two-pass algorithm" to avoid
	round-off errors. Re-indent printed output to accommodate the
	longer descriptions of the new values. In case values cannot be
	calculated set corresponding user variables to NaN and print
	"undefined".
	Patch #656

2014-03-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (parse_color_name) src/set.c (set_palette_defined):
	Accept quoted hexadecimal constant as a color name.