@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: show.c,v 1.312 2014/01/18 16:14:50 markisch Exp $"); }
+static char *RCSid() { return RCSid("$Id: show.c,v 1.313 2014/02/28 00:24:21 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - show.c */
@@ -2560,6 +2560,8 @@ show_fit()
 
     fprintf(stderr, "\tfit will%s place parameter errors in variables\n",
 	    fit_errorvariables ? "" : " not");
+    fprintf(stderr, "\tfit will%s place covariances in variables\n",
+	    fit_covarvariables ? "" : " not");
 
     fprintf(stderr,
             "\tfit will%s scale parameter errors with the reduced chi square\n",
