@@ -25,6 +25,7 @@ New features, changes and fixes since gnuplot version 4.6
 * NEW x11 support for toggling plots on/off with left mouseclick on the key
 * NEW post term can use /FlateDecode to reduce the size of embedded images
 * NEW 'set fit quiet|results|brief|verbose' changes fit's verbosity
+* NEW fit optionally stores final covariances to user variables
 * NEW fit command takes errors of indendent variables into account
 * NEW 'set multiplot next/previous'
 * NEW 'set contours; splot FOO with labels' places labels on the contour lines
@@ -58,7 +59,7 @@ New features, changes and fixes since gnuplot version 4.6
 * CHANGE fit options are controlled via `set fit` instead of FIT_ variables
 * CHANGE fit defaults to brief one-line progress reports
 * CHANGE fit 'prescale's parameters by default
-* CHANGE new syntax to specify errors in dependent and independent variables
+* CHANGE new fit syntax to specify errors in dependent and independent variables
 * CHANGE treat empty field in a csv file as "missing" rather than "bad"
 * CHANGE strip \r from data lines on input so that DOS format *.csv can be read
 * CHANGE Use Sutherland-Hodgman algorithm for clipping polygons and filled curves
